@@ -370,19 +370,19 @@ public final class Collector {
 	 */
 	public void saveScreenshot() {
 		int ofs=0;		
-		String suffix = frames+".png";
+		String suffix = ".png";
 		for (Visual v: allVisuals) {
-			String prefix = "screenshot/"+ofs;
+			String prefix = "screenshot/"+frames+"-"+ofs+"-";
 			PImage p = v.getGeneratorAsImage(0);
-			p.save(prefix+"-gen1-"+suffix);
+			p.save(prefix+"gen1"+suffix);
 			p=v.getGeneratorAsImage(1);
-			p.save(prefix+"-gen2-"+suffix);
+			p.save(prefix+"gen2"+suffix);
 			p=v.getEffectAsImage(0);
-			p.save(prefix+"-fx1-"+suffix);
+			p.save(prefix+"fx1"+suffix);
 			p=v.getEffectAsImage(1);
-			p.save(prefix+"-fx2-"+suffix);
+			p.save(prefix+"fx2"+suffix);
 			p=v.getMixerAsImage();
-			p.save(prefix+"-mix-"+suffix);
+			p.save(prefix+"mix"+suffix);
 			ofs++;
 		}
 	}
