@@ -106,3 +106,5 @@ GeneratorGui.TEXTWRITER_PINGPONG=PingPong
 GeneratorGui.TEXTWRITER_LEFT=Left
 GeneratorGui.INFO_WINDOW_HEIGHT=Window Height: 
 GeneratorGui.INFO_INTERNAL_BUFFERSIZE=Internal Buffersize: 
+GeneratorGui.SAVE_SCREENSHOT=Save Screenshot
+GeneratorGui.TOOLTIP_SAVE_SCREENSHOT=Save current Visuals into the Screenshot directory
